--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -20,7 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AtomicPhysics.h" />
+    <ClInclude Include="Circle.h" />
     <ClInclude Include="Circuits.h" />
+    <ClInclude Include="Cone.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="Cylinder.h" />
     <ClInclude Include="DynamicsAndForces.h" />
@@ -41,8 +43,10 @@
     <ClInclude Include="LogisticRegression.h" />
     <ClInclude Include="Magnetism.h" />
     <ClInclude Include="MatrixND.h" />
+    <ClInclude Include="Parallelogram.h" />
     <ClInclude Include="PeriodicElements.h" />
     <ClInclude Include="Physics_World.h" />
+    <ClInclude Include="Pyramid.h" />
     <ClInclude Include="QuantumPhysics.h" />
     <ClInclude Include="RandomNumbers.h" />
     <ClInclude Include="Rectangle.h" />
@@ -50,6 +54,7 @@
     <ClInclude Include="RegexHelper.h" />
     <ClInclude Include="RunTimer.h" />
     <ClInclude Include="SpecialRelativity.h" />
+    <ClInclude Include="Sphere.h" />
     <ClInclude Include="Square.h" />
     <ClInclude Include="StringHelper.h" />
     <ClInclude Include="Temperature.h" />
