started adding simple collision detection class. Also started playing around with symengine, trying to use it alongside eigen3 to use symbolic letter variables inside matrix operations.

--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -192,6 +192,12 @@
     <ClInclude Include="Parallelogram.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CollisionPackage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Asteroid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="testFactory.cpp">
