--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="Circuits.h" />
     <ClInclude Include="CollisionPackage.h" />
     <ClInclude Include="Cone.h" />
+    <ClInclude Include="Core.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="Cylinder.h" />
     <ClInclude Include="DynamicsAndForces.h" />
@@ -48,6 +49,7 @@
     <ClInclude Include="Parallelogram.h" />
     <ClInclude Include="PeriodicElements.h" />
     <ClInclude Include="Physics_World.h" />
+    <ClInclude Include="Point2D.h" />
     <ClInclude Include="Pyramid.h" />
     <ClInclude Include="QuantumPhysics.h" />
     <ClInclude Include="RandomNumbers.h" />
@@ -74,6 +76,7 @@
     <ClInclude Include="RotationalMotion.h" />
     <ClInclude Include="Statics.h" />
     <ClInclude Include="Torque.h" />
+    <ClInclude Include="Vector.h" />
     <ClInclude Include="Vector2D.h" />
     <ClInclude Include="Vector3D.h" />
     <ClInclude Include="VectorND.h" />
@@ -86,6 +89,7 @@
     <ClCompile Include="RandomNumbers.cpp" />
     <ClCompile Include="Square.cpp" />
     <ClCompile Include="testFactory.cpp" />
+    <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="drunkRace.txt" />
