--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -276,18 +276,15 @@
     <ClInclude Include="Voronoi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MathFx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="testFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="RandomNumbers.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="PeriodicElements.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Square.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Vector.cpp">
